<resources>
    <string name="app_name">FleetManager</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="add_car">Add Car</string>
    <string name="car_name">Car Name</string>
    <string name="car_model">Car Model</string>
    <string name="registration_number">Registration Number</string>
    <string name="edit_car">Edit Car</string>
    <string name="delete_car">Delete Car</string>
    <string name="save_car">Save Car</string>
    <string name="view_expenses">View expenses</string>
    <string name="model_auto">Model car</string>
    <string name="year">Year</string>
    <string name="textPlateNumber">Number plate</string>
    <string name="update_car">Update car</string>
    <string name="add_trip">Add Trip</string>
    <string name="date">Date</string>
    <string name="distance">Distance</string>
    <string name="update_trip">Update Trip</string>
    <string name="delete_trip">Delete trip</string>
    <string name="fuel_consumption">Fuel Consumption</string>
    <string name="select_car">Select Car</string>
    <string name="service_type">Service Type</string>
    <string name="cost">Cost</string>
    <string name="add_service">Add Service</string>
    <string name="update_service">Update Service</string>
    <string name="delete_service">Delete Service</string>
    <string name="expense_type">Expense Type</string>
    <string name="add_expense">Add Expense</string>
    <string name="update_expense">Update Expense</string>
    <string name="delete_expense">Delete Expense</string>
    <string name="amount">Amount</string>
    <string name="description">Description</string>
    <string name="expenses">Expenses</string>
    <string name="services">Services</string>
    <string name="trips">Trips</string>
    <string name="cars">Cars</string>
</resources>