<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ServiceActivity"
    android:orientation="vertical"
    android:padding="16dp">

    <Spinner
        android:layout_margin="5dp"
        android:id="@+id/spinnerCar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/select_car"
        android:minHeight="48dp"/>

    <EditText
        android:layout_margin="5dp"
        android:id="@+id/editTextDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:textColor="#000"
        android:textColorHint="#000"
        android:textStyle="bold"
        android:inputType="date"
        android:importantForAutofill="no"
        android:hint="@string/date"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:layout_margin="5dp"
        android:id="@+id/editTextServiceType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:textColor="#000"
        android:textColorHint="#000"
        android:textStyle="bold"
        android:inputType="text"
        android:importantForAutofill="no"
        android:hint="@string/service_type"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:layout_margin="5dp"
        android:id="@+id/editTextCost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:textColor="#000"
        android:textColorHint="#000"
        android:textStyle="bold"
        android:inputType="numberDecimal"
        android:importantForAutofill="no"
        android:hint="@string/cost"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/buttonAddService"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cornerRadius="1dp"
        android:layout_margin="5dp"
        android:text="@string/add_service"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/buttonUpdateService"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cornerRadius="1dp"
        android:layout_margin="5dp"
        android:text="@string/update_service"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/buttonDeleteService"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cornerRadius="1dp"
        android:layout_margin="5dp"
        android:text="@string/delete_service"
        tools:ignore="VisualLintButtonSize" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewServices"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

</LinearLayout>