<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CarsActivity"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:layout_margin="5dp"
        android:id="@+id/editTextModel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:textColor="#000"
        android:textColorHint="#000"
        android:textStyle="bold"
        android:inputType="text"
        android:importantForAutofill="no"
        android:hint="@string/model_auto"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:layout_margin="5dp"
        android:id="@+id/editTextYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:textColor="#000"
        android:textColorHint="#000"
        android:textStyle="bold"
        android:inputType="number"
        android:importantForAutofill="no"
        android:hint="@string/year"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:layout_margin="5dp"
        android:id="@+id/editTextPlateNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:textColor="#000"
        android:textColorHint="#000"
        android:textStyle="bold"
        android:inputType="text"
        android:importantForAutofill="no"
        android:hint="@string/textPlateNumber"
        tools:ignore="TextFields,VisualLintTextFieldSize" />

    <Button
        android:id="@+id/buttonAddCar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cornerRadius="1dp"
        android:layout_margin="5dp"
        android:text="@string/add_car"/>

    <Button
        android:id="@+id/buttonUpdateCar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cornerRadius="1dp"
        android:layout_margin="5dp"
        android:text="@string/update_car"/>

    <Button
        android:id="@+id/buttonDeleteCar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cornerRadius="1dp"
        android:layout_margin="5dp"
        android:text="@string/delete_car"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewCars"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

</LinearLayout>