<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:layout_margin="5dp"
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:textColor="#000"
        android:textColorHint="#000"
        android:textStyle="bold"
        android:inputType="textEmailAddress"
        android:importantForAutofill="no"
        android:hint="@string/email"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:layout_margin="5dp"
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:textColor="#000"
        android:textColorHint="#000"
        android:textStyle="bold"
        android:inputType="textPassword"
        android:importantForAutofill="no"
        android:hint="@string/password"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cornerRadius="1dp"
        android:layout_margin="5dp"
        android:text="@string/register"/>

</LinearLayout>